# crypto-bot

./: .gitmodules  CMakeLists.txt  README.md  binanceTest.cpp  main.cpp  rest.cpp  restTest.cpp  test.cpp  websocketTest.cpp
cexkit/include/cexkit/: cexdef.hpp  ringbuffer.hpp  utils.hpp
cexkit/include/cexkit/binance/: datahub.hpp  orderbook.hpp
cexkit/src/: utils.cpp
cexkit/src/binance/: datahub.cpp  orderbook.cpp
netKit/include/netKit/: https.hpp  proxy.hpp  rest.hpp  utils.hpp
netKit/src/: https.cpp  proxy.cpp  rest.cpp  utils.cpp
netkit/include/netkit/: netdef.hpp  proxy.hpp  rest.hpp  utils.hpp  websocket.hpp
netkit/src/: netdef.cpp  proxy.cpp  rest.cpp  utils.cpp  websocket.cpp
